create known arguments immutable